# unicode-normalizer

./: Cargo.toml  README.md  build.sh
src/: commands.rs  lib.rs  main.rs  renamer.rs
tests/: renamer_test.rs
