[package]
name = "unicode-normalizer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
unicode-normalization = "0.1.22"
walkdir = "2.3.2"

[dev-dependencies]
tempdir = "0.3.7"
